Implementación de la interfaz que maneja el información de la tabla Personas en la base de datos. Implmentación del CRUD para Persona y prueba de los métodos. Método AddPersona funcionando, sin embargo, el ID es autoincremental. Método GetPersona NO funciona. El resto de métodos no han sido probados(DeletePersona y UpdatePersona dependen de GetPersona).

--- a/PorcinoRemoto.App.Consola/PorcinoRemoto.App.Consola.csproj
+++ b/PorcinoRemoto.App.Consola/PorcinoRemoto.App.Consola.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PorcinoRemoto.App.Persistencia\PorcinoRemoto.App.Persistencia.csproj" />
+    <ProjectReference Include="..\PorcinoRemoto.App.Dominio\PorcinoRemoto.App.Dominio.csproj" />
   </ItemGroup>
 
 </Project>
