--- a/PorcinoRemoto.App.Frontend/PorcinoRemoto.App.Frontend.csproj
+++ b/PorcinoRemoto.App.Frontend/PorcinoRemoto.App.Frontend.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <ItemGroup>
+    <ProjectReference Include="..\PorcinoRemoto.App.Dominio\PorcinoRemoto.App.Dominio.csproj" />
+    <ProjectReference Include="..\PorcinoRemoto.App.Persistencia\PorcinoRemoto.App.Persistencia.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
